--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "apm-protocol/apm-network/src/main/proto"]
 	path = apm-protocol/apm-network/src/main/proto
-url=https://github.com/Yonghui-Superstores/skywalking-protocol.git
+    url=https://github.com/Yonghui-Superstores/skywalking-protocol.git
 [submodule "oap-server/server-query-plugin/query-graphql-plugin/src/main/resources/query-protocol"]
 	path = oap-server/server-query-plugin/query-graphql-plugin/src/main/resources/query-protocol
-url=https://github.com/Yonghui-Superstores/skywalking-query-protocol.git
+    url=https://github.com/Yonghui-Superstores/skywalking-query-protocol.git
 [submodule "test/e2e/e2e-ttl/e2e-ttl-es/src/main/proto"]
 	path = test/e2e/e2e-ttl/e2e-ttl-es/src/main/proto
 	url = https://github.com/apache/skywalking-data-collect-protocol.git
+[submodule "skywalking-ui"]
+	path = skywalking-ui
+	url = https://github.com/Yonghui-Superstores/skywalking-rocketbot-ui.git
