--- a/apm-webapp/src/main/resources/application.yml
+++ b/apm-webapp/src/main/resources/application.yml
@@ -32,7 +32,9 @@ collector:
   ribbon:
     # Point to all backend's restHost:restPort, split by ,
     listOfServers: 127.0.0.1:12800
-
+#    listOfServers: 10.251.112.3:12800
+    ReadTimeout: 60000
+    ConnectTimeout: 60000
 spring:
   resources:
     add-mappings: false
@@ -42,3 +44,15 @@ spring:
 management:
   # Customizing the management endpoint paths
   context-path: /manage
+
+security:
+  user:
+    admin:
+      password: admin
+
+sso:
+  ssologin: http://api.itwork.yonghui.cn/oauth/oauth/authorize?response_type=code&client_id=lskywalking&redirect_uri=http://localhost:8080/sso/callback
+  redicturl: /#/monitor/dashboard
+  registerurl: http://localhost:8080/sso/callback
+  clientId: lskywalking
+
