--- a/pom.xml
+++ b/pom.xml
@@ -584,8 +584,7 @@
                         org/apache/skywalking/oap/server/core/remote/grpc/proto/*.java,
                         org/apache/skywalking/oal/rt/grammar/*.java,
                         org/apache/skywalking/oap/server/exporter/grpc/*.java,
-                        org/apache/skywalking/oap/server/configuration/service/*.java,
-                        org/apache/skywalking/apm/webapp/**/*.java
+                        org/apache/skywalking/oap/server/configuration/service/*.java
                     </excludes>
                     <propertyExpansion>
                         import.control=apm-checkstyle/importControl.xml
