--- a/apm-sniffer/apm-sdk-plugin/pom.xml
+++ b/apm-sniffer/apm-sdk-plugin/pom.xml
@@ -95,6 +95,7 @@
         <module>influxdb-2.x-plugin</module>
         <module>baidu-brpc-plugin</module>
         <module>graphql-plugin</module>
+        <module>jersey-1.18.x-plugin</module>
     </modules>
     <packaging>pom</packaging>
 
